--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     password: HITwh352@
     type: com.alibaba.druid.pool.DruidDataSource
   jackson:
-    default-property-inclusion: non_null # JSON?????????
+    default-property-inclusion: non_null
   data:
     redis:
       host: 47.93.124.212
@@ -21,5 +21,3 @@ spring:
           max-idle: 8
           min-idle: 0
           max-wait: 100ms
-mybatis-plus:
-  type-aliases-package: com.hitwh.entity # ?????
