--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8081
 spring:
+  devtools:
+    restart:
+      enabled: true
   session:
     timeout: 1800 # 30 minutes
   application:
@@ -25,4 +28,6 @@ spring:
           max-wait: 100ms
 mybatis-plus:
   type-aliases-package: edu.hitwh.entity # 别名扫描包
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 #  mapper-locations: edu.hitwh.mapper
