--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,20 @@
 server:
   port: 8081
 spring:
+  redis:
+    host: 47.93.124.212
+    port: 6379
+    lettuce:
+      pool:
+        max-active: 8
+        max-idle: 8
+        min-idle: 0
+        max-wait: 100ms
   devtools:
     restart:
       enabled: true
   session:
+    store-type: redis
     timeout: 1800 # 30 minutes
   application:
     name: sass-authority-backend
